DigicielFull/force-app/main/default/objects/TIMBASURVEYS__OptionBranchingRule__c/TIMBASURVEYS__OptionBranchingRule__c.object-meta.xml
<CustomObject>
    <label>OptionBranchingRule</label>
    <nameField>
        <label>OptionBranchingRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OptionBranchingRules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>