DigicielFull/force-app/main/default/objects/TIMBASURVEYS__OptionBranchingRule__c/fields/TIMBASURVEYS__Answered__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answered</label>
    <type>Checkbox</type>
</CustomField>