DigicielFull/force-app/main/default/objects/TIMBASURVEYS__OptionBranchingRule__c/fields/TIMBASURVEYS__AnswerOption__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__AnswerOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AnswerOption</label>
    <referenceTo>TIMBASURVEYS__AnswerOption__c</referenceTo>
    <relationshipLabel>OptionBranchingRules</relationshipLabel>
    <relationshipName>OptionBranchingRules</relationshipName>
    <type>Lookup</type>
</CustomField>