DigicielFull/force-app/main/default/objects/TIMBASURVEYS__OptionBranchingRule__c/fields/TIMBASURVEYS__IsPageBranch__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__IsPageBranch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPageBranch</label>
    <type>Checkbox</type>
</CustomField>